# AsyncDB

./: .gitignore  .travis.yml  CMakeLists.txt
Include/AsyncDB/: ADBAbstractListModelConfiguration.h  ADBCustomListModelConfiguration.h  ADBDatabase.h  ADBDatabaseConfiguration.h  ADBItemModel.h  ADBListModel.h  ADBListModelConfiguration.h  AsyncDB.h
Include/Threads/: ThreadManager.h
Qml/: CMakeLists.txt
Qml/Include/AsyncDB/: QmlAsyncDB.h
Qml/Src/AsyncDB/: QmlAsyncDB.cpp
Src/AsyncDB/: ADBAbstractListModelConfiguration.cpp  ADBCustomListModelConfiguration.cpp  ADBDatabase.cpp  ADBDatabaseConfiguration.cpp  ADBError.cpp  ADBError.h  ADBItemModel.cpp  ADBListModel.cpp  ADBListModelConfiguration.cpp  ADBQueryHelpers.cpp  ADBQueryHelpers.h  ADBQueryResultDelegate.cpp.autosave  AsyncDB.cpp
Src/Threads/: ThreadManager.cpp
Tests/: CMakeLists.txt  CustomConfigPage.qml  ListConfigurationPage.qml  LitOfQuery.qml  main.cpp  main.qml  qml.qrc
Tests/CppTests/: CMakeLists.txt  ThreadTests.cpp
Tests/TestApp/: CustomConfigPage.qml  ListConfigurationPage.qml  LitOfQuery.qml  TestsDB.sqlite  main.qml  qml.qrc
